data/derived/fa15/progs/unify/prog1933.ml.out
Characters 34-47:
  let rec clone x n = sepConcat ";" (clone x n-1);;
                                    ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         string list
